# AlignmentBiasCheckingTools

./: .gitignore  README.md  align_test.py  assistants.py  benchmark_building.py  plot.py  pyproject.toml  requirements.txt
alignbiascheck/: __init__.py  _pipeine.py  abcData.py  analytics.py  assembler.py  benchmark_building.py  diagnoser.py  extractor.py  generator.py  new.py  pipelines.py  scrape.py
alignmentbiascheckingtools/: README.md  __init__.py  analytics.py  benchmark_building.py
expected_results/: gender_woman_keywords_expected.json  gender_woman_prompts_expected.csv  gender_woman_scrap_area_expected.json  political-ideology_anarchism_prompts_expected.csv  profession_basketball_scrap_area_expected.json  profession_basketball_scrapped_expected.json  profession_technician_prompts_expected.csv  religion_atheism_keywords_expected.json  religion_atheism_prompts_expected.csv  religion_hinduism_keywords_expected.json  religion_hinduism_scrap_area_expected.json
new_test_env/: pyvenv.cfg
temp_results/: en.wikipedia.org_wiki_OpenAI_Codex_allow.txt  en.wikipedia.org_wiki_OpenAI_Codex_allow_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Codex_app.txt  en.wikipedia.org_wiki_OpenAI_Codex_axios.txt  en.wikipedia.org_wiki_OpenAI_Codex_foundation_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Codex_lost.txt  en.wikipedia.org_wiki_OpenAI_Codex_options_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Codex_policy_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Five_allow.txt  en.wikipedia.org_wiki_OpenAI_Five_allow_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Five_app_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Five_bot.txt  en.wikipedia.org_wiki_OpenAI_Five_bot_source_tag.txt  en.wikipedia.org_wiki_OpenAI_Five_collaboration.txt  en.wikipedia.org_wiki_OpenAI_Five_collaboration_source_tag.txt  (+52 more)
test/: abcData.py  (+9 more)
(+257 files in other folders)
