[tool.poetry]
name = "alignmentbiascheckingtools"
version = "0.1.0"
description = "Alignment bias package with benchmark building and analytical tools"
authors = ["HolisticAI"]
readme = "README.md"
packages = [{include = "alignmentbiascheckingtools"}, {include = "external_dependency"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.3"
tqdm = "^4.66.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
wikipedia-api = "^0.6.0"
nltk = "^3.8.1"
plotly = "^5.23.0"
backoff = "^5.23.0"
openai = "^1.37.2"
ollama = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
