[tool.poetry]
name = "alignbiascheck"
version = "0.1.0"
description = "Alignment bias package with benchmark building and analytical tools"
authors = ["HolisticAI"]
readme = "README.md"
packages = [{include = "alignbiascheck"}]
include = ["external_dependency/*.whl"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.3"
tqdm = "^4.66.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
wikipedia-api = "^0.6.0"
nltk = "^3.8.1"
plotly = "^5.23.0"
scipy = "^1.7.3"
scikit-learn = "^1.0"
spacy = "^3.2.1"
transformers = "^4.11.3"
sentence-transformers = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
